--- a/index.html
+++ b/index.html
@@ -18,3 +18,15 @@
             <img src="Assets/images/image2.jpeg">
             
         </div>
+        <h3 id="milk">productions per shed </h3>
+<form>
+    Shed A:<input type="number" name="shed" value="" /><br>
+    Shed B:<input type="number" name="shed" value="" /><br>
+    Shed C:<input type="number" name="shed" value="" /><br>
+    Shed D:<input type="number" name="shed" value="" /><br>
+    <button type="button" name="button" onclick="mary()" class = "btn">
+        Generate report
+    </button>
+    <br> 
+      
+    <p id="res">
