Properly linking css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="Assets/index.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Assets/css/index.css">
 </head>
 <body>
     <div class="dashbaord">
@@ -39,7 +39,7 @@
         <button class="btn"  id = "yearly"> Yearly income </button>
    
         <footer>
-            <p>&copy; copyright reserved @2021</p>
+            <p>&copy; copyright reserved @Chebet2022</p>
    
         </footer>
    
