--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         Generate report
     </button>
     <br> 
+    <p> Litres per shed</p>
       
     <p id="input">
         <button class="btn" id = "daily"> Daily income </button>
