Adding production columns

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
             <img src="Assets/images/image2.jpeg">
             
         </div>
-        <h3 id="milk">Productions Per Shed </h3>
+        <h3 id="milk">Productions Per Shed in LItres</h3>
 <form>
     Shed A:<input type="number" name="shed" value="" /><br>
     Shed B:<input type="number" name="shed" value="" /><br>
     Shed C:<input type="number" name="shed" value="" /><br>
     Shed D:<input type="number" name="shed" value="" /><br>
-    <button type="button" name="button" onclick="chebet()" class = "btn">
+    <div> 
+       <button type="button" name="button" onclick="chebet()" class = "btn">
         Generate report
     </button>
     <br> 
@@ -38,6 +39,8 @@
        <p> <button class="btn" id = "monthly" > Monthly income </button></p>
    
         <button class="btn"  id = "yearly"> Yearly income </button>
+    </p>
+    </div>
    
         <footer>
             <p>&copy; copyright reserved @Chebet2022</p>
