--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
 <body>
     <div class="dashbaord">
         <h1> CHEBET DAIRIES</h1>
-        <p> Chebet dairies in Kenya is one of the most reliable and significant sectors of the economy. IT serves not only the local residerent but the entore nation</p>
+        <p id="Bio"> Chebet dairies in Kenya is one of the most reliable and significant sectors of the economy. IT serves not only the local residerent but the entore nation</p>
         <div class="images">
             
             <img src="Assets/images/image1.jpeg">
             <img src="Assets/images/image2.jpeg">
             
         </div>
-        <h3 id="milk">Productions Per Shed in LItres</h3>
+        <h3 id="milk">Fill and submit the form bellow to get a summary of your income</h3>
 <form>
     Shed A:<input type="number" name="shed" value="" /><br>
     Shed B:<input type="number" name="shed" value="" /><br>
     Shed C:<input type="number" name="shed" value="" /><br>
     Shed D:<input type="number" name="shed" value="" /><br>
-    <div> 
        <button type="button" name="button" onclick="chebet()" class = "btn">
-        Generate report
+        Report Summary
     </button>
     <br> 
     <p> Litres per shed</p>
@@ -40,7 +39,6 @@
    
         <button class="btn"  id = "yearly"> Yearly income </button>
     </p>
-    </div>
    
         <footer>
             <p>&copy; copyright reserved @Chebet2022</p>
