--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="dashbaord">
         <h1> CHEBET DAIRIES</h1>
-        <p id="Bio"> Chebet dairies in Kenya is one of the most reliable and significant sectors of the economy. IT serves not only the local residerent but the entore nation</p>
+        <p id="bio"> Chebet dairies in Kenya is one of the most reliable and significant sectors of the economy. IT serves not only the local residerent but the entore nation</p>
         <div class="images">
             
             <img src="Assets/images/image1.jpeg">
@@ -39,11 +39,6 @@
    
         <button class="btn"  id = "yearly"> Yearly income </button>
     </p>
-   
-        <footer>
-            <p>&copy; copyright reserved @Chebet2022</p>
-   
-        </footer>
    
    </form>
    
