--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Assets/index.js"></script>
+    <script src="Assets/js/index.js"></script>
     <link rel="stylesheet" href="Assets/css/index.css">
 </head>
 <body>
