--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="dashbaord">
         <h1> CHEBET DAIRIES</h1>
-        <p id="bio"> Chebet dairies in Kenya is one of the most reliable and significant sectors of the economy. IT serves not only the local residerent but the entore nation</p>
+        <p id="bio"> Chebet dairies in Kenya is one of the most reliable and significant dairy farm. It serves not only the local residerent but the entire nation</p>
         <div class="images">
             
             <img src="Assets/images/image1.jpeg">
