--- a/index.html
+++ b/index.html
@@ -18,17 +18,16 @@
             <img src="Assets/images/image2.jpeg">
             
         </div>
-        <h3 id="milk">Fill and submit the form bellow to get a summary of your income</h3>
+        <h3 id="milk">Fillin the production form below;</h3>
 <form>
-    Shed A:<input type="number" name="shed" value="" /><br>
-    Shed B:<input type="number" name="shed" value="" /><br>
-    Shed C:<input type="number" name="shed" value="" /><br>
-    Shed D:<input type="number" name="shed" value="" /><br>
+    Shed A (in litres):<input type="number" name="shed" value="" /><br>
+    Shed B (in litres):<input type="number" name="shed" value="" /><br>
+    Shed C (in litres):<input type="number" name="shed" value="" /><br>
+    Shed D (in litres):<input type="number" name="shed" value="" /><br>
        <button type="button" name="button" onclick="chebet()" class = "btn">
         Report Summary
     </button>
     <br> 
-    <p> Litres per shed</p>
       
     <p id="input">
         <button class="btn" id = "daily"> Daily income </button>
