Adding the optional question

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         <div class="Output">
             
-            <div class="productionData">
+            <div class="production">
                 
-                <form action="submit" onsubmit="produceReport();">
+                <form action="submit" onsubmit="reportSummary();">
                     <h3>Fill the form to obtain your periodical income</h3> 
                     <div id="sheds">
                         <label for="shed_A">Shed_A: Milk (Litres)</label>
@@ -54,7 +54,7 @@
             <div class="display">
                 <h3 id="displayTitle">Income Summary</h3>
                 <hr>
-                <p id="outputData"></p>
+                <p id="output-D"></p>
 
             </div>
         </div>
